lobby/css: Fix filter checkbox focus border cutoff - fixes #7210"

--- a/ui/lobby/css/app/_hook-filter.scss
+++ b/ui/lobby/css/app/_hook-filter.scss
@@ -16,7 +16,7 @@
   }
 
   .checkable {
-    padding: 4.3px 0;
+    padding: 4.3px 2px 4.3px 0;
   }
 
   .checkable {
@@ -43,7 +43,7 @@
 
   tr.inline .checkable {
     display: inline-block;
-    padding: 4.3px 20px 4.3px 0;
+    padding: 4.3px 20px 4.3px 2px;
   }
 
   input {
